--- a/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
+++ b/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
@@ -46,4 +46,5 @@ steps:
 
 # Push the custom image to Container Registry 
 images: ['gcr.io/$PROJECT_ID/$_TFX_IMAGE_NAME:$TAG_NAME']
-logging: CLOUD_LOGGING_ONLY
+options:
+  logging: CLOUD_LOGGING_ONLY
